examples/errors/syntax06.cpp
#include <stdio.h>

#define P printf

int main()
{
    int x[1]={((3+5)*2)}
	P("%i\n",x[0]);
    return 0;
}

